// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as disabled 1`] = `
.c0 {
  vertical-align: bottom !important;
  margin: 0 0.07142857142857142rem;
}

.c1 {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

<div>
  <div
    class="c0"
  >
    <div
      class="text__c-txt___Uzv-G range__c-range___1aYaS "
    >
      <label
        class="c1 text__c-txt__label___3wMPZ "
        data-garden-container-id="containers.field"
        data-garden-container-version="1.3.3"
        data-garden-id="forms.text_label"
        data-garden-version="7.1.10"
        for="2val-field_1.3.3--input"
        id="2val-field_1.3.3--label"
      >
        placeholder
      </label>
      <textarea
        aria-describedby="2val-field_1.3.3--hint"
        aria-invalid="false"
        aria-labelledby="2val-field_1.3.3--label"
        class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
        data-garden-id="forms.textarea"
        data-garden-version="7.1.10"
        data-testid="message-field"
        id="2val-field_1.3.3--input"
        name="inputBox"
        placeholder="placeholder"
        rows="3"
      />
    </div>
  </div>
</div>
`;

exports[`renders as mobile 1`] = `
.c0 {
  vertical-align: bottom !important;
  margin: 0 0.07142857142857142rem;
}

.c1 {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

<div>
  <div
    class="c0"
  >
    <div
      class="text__c-txt___Uzv-G range__c-range___1aYaS "
    >
      <label
        class="c1 text__c-txt__label___3wMPZ "
        data-garden-container-id="containers.field"
        data-garden-container-version="1.3.3"
        data-garden-id="forms.text_label"
        data-garden-version="7.1.10"
        for="3val-field_1.3.3--input"
        id="3val-field_1.3.3--label"
      >
        placeholder
      </label>
      <textarea
        aria-describedby="3val-field_1.3.3--hint"
        aria-invalid="false"
        aria-labelledby="3val-field_1.3.3--label"
        class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
        data-garden-id="forms.textarea"
        data-garden-version="7.1.10"
        data-testid="message-field"
        id="3val-field_1.3.3--input"
        name="inputBox"
        placeholder="placeholder"
        rows="1"
      />
    </div>
  </div>
</div>
`;

exports[`renders the expected classes 1`] = `
.c0 {
  vertical-align: bottom !important;
  margin: 0 0.07142857142857142rem;
}

.c1 {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

<div>
  <div
    class="c0"
  >
    <div
      class="text__c-txt___Uzv-G range__c-range___1aYaS "
    >
      <label
        class="c1 text__c-txt__label___3wMPZ "
        data-garden-container-id="containers.field"
        data-garden-container-version="1.3.3"
        data-garden-id="forms.text_label"
        data-garden-version="7.1.10"
        for="1val-field_1.3.3--input"
        id="1val-field_1.3.3--label"
      >
        placeholder
      </label>
      <textarea
        aria-describedby="1val-field_1.3.3--hint"
        aria-invalid="false"
        aria-labelledby="1val-field_1.3.3--label"
        class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
        data-garden-id="forms.textarea"
        data-garden-version="7.1.10"
        data-testid="message-field"
        id="1val-field_1.3.3--input"
        name="inputBox"
        placeholder="placeholder"
        rows="3"
      />
    </div>
  </div>
</div>
`;

exports[`renders with value 1`] = `
.c0 {
  vertical-align: bottom !important;
  margin: 0 0.07142857142857142rem;
}

.c1 {
  position: absolute;
  overflow: hidden;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

<div>
  <div
    class="c0"
  >
    <div
      class="text__c-txt___Uzv-G range__c-range___1aYaS "
    >
      <label
        class="c1 text__c-txt__label___3wMPZ "
        data-garden-container-id="containers.field"
        data-garden-container-version="1.3.3"
        data-garden-id="forms.text_label"
        data-garden-version="7.1.10"
        for="4val-field_1.3.3--input"
        id="4val-field_1.3.3--label"
      >
        placeholder
      </label>
      <textarea
        aria-describedby="4val-field_1.3.3--hint"
        aria-invalid="false"
        aria-labelledby="4val-field_1.3.3--label"
        class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
        data-garden-id="forms.textarea"
        data-garden-version="7.1.10"
        data-testid="message-field"
        id="4val-field_1.3.3--input"
        name="inputBox"
        placeholder="placeholder"
        rows="3"
      >
        doremi
      </textarea>
    </div>
  </div>
</div>
`;
